# internal/api/types.gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
 package api
 
+import (
+	"time"
+)
+
 const (
 	BearerAuthScopes = "BearerAuth.Scopes"
 )
@@ -10,9 +14,9 @@ const (
 // ShortCode defines model for ShortCode.
 type ShortCode struct {
 	Attributes  *map[string]interface{} `json:"attributes,omitempty"`
-	CreatedAt   *string                 `json:"createdAt,omitempty"`
-	ExpiresAt   *string                 `json:"expiresAt"`
-	Id          *int                    `json:"id,omitempty"`
+	CreatedAt   *time.Time              `json:"createdAt,omitempty"`
+	ExpiresAt   *time.Time              `json:"expiresAt"`
+	Id          *int32                  `json:"id,omitempty"`
 	OriginalUrl *string                 `json:"originalUrl,omitempty"`
 	ShortCode   *string                 `json:"shortCode,omitempty"`
 }
@@ -20,7 +24,7 @@ type ShortCode struct {
 // ShortCodeInput defines model for ShortCodeInput.
 type ShortCodeInput struct {
 	Attributes  *map[string]interface{} `json:"attributes,omitempty"`
-	ExpiresAt   *string                 `json:"expiresAt"`
+	ExpiresAt   *time.Time              `json:"expiresAt"`
 	OriginalUrl string                  `json:"originalUrl"`
 	ShortCode   string                  `json:"shortCode"`
 }
@@ -30,8 +34,8 @@ type ListShortCodesParams struct {
 	// Limit Maximum number of results to return
 	Limit *int32 `form:"limit,omitempty" json:"limit,omitempty"`
 
-	// Offset Number of items to skip before starting to collect the result set
-	Offset *int32 `form:"offset,omitempty" json:"offset,omitempty"`
+	// PreviousId Last seen ID for pagination
+	PreviousId *int32 `form:"previous_id,omitempty" json:"previous_id,omitempty"`
 }
 
 // CreateShortCodeJSONRequestBody defines body for CreateShortCode for application/json ContentType.
